fixed old icon visibility on navigation sidebar

--- a/system/modules/font-awesome/assets/icons-uncompressed.css
+++ b/system/modules/font-awesome/assets/icons-uncompressed.css
@@ -1,5 +1,6 @@
 #left #tl_navigation a.navigation.icon {
 	padding-left: 0 !important;
+	background-image: none;
 }
 
 .icon {
